--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1540,7 +1540,7 @@ Feauture Three
     position: relative;
     display: block;
     background: var(--thm-white);
-    padding: 120px 0px 120px;
+    padding: 120px 0px 100px;
     z-index: 1;
 }
 
@@ -1755,11 +1755,13 @@ Feauture Two
     position: relative;
     display: block;
     background: var(--thm-white);
-    padding: 100px 0px 100px;
+    padding: 50px 0px 50px;
     padding-right: 40px;
     overflow: hidden;
     box-shadow: 0px 4px 60px 0px rgba(21, 24, 32, 0.06);
     z-index: 1;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .feauture-two__single::before {
@@ -2229,6 +2231,7 @@ Call To Action One
     background-repeat: no-repeat;
     background-position: center center;
     z-index: -1;
+    height: 500px;
 }
 
 .call-to-action-one__bg::before {
@@ -2249,10 +2252,11 @@ Call To Action One
 .call-to-action-one__content {
     position: relative;
     display: block;
+    
 }
 
 .call-to-action-one__content h2 {
-    color: var(--thm-white);
+    /* color: var(--thm-white); */
     font-size: 80px;
     line-height: 1.2em;
     font-weight: 700;
@@ -2288,8 +2292,10 @@ Why Choose Us One
 .why-choose-us-one {
     position: relative;
     display: block;
-    padding: 120px 0px 120px;
+    padding: 140px 0px 120px;
     z-index: 1;
+    background-color: #1a1b1f;
+    /* margin-top: -150px; */
 }
 
 .why-choose-us-one .row {
@@ -2408,7 +2414,7 @@ Why Choose Us One
 .why-choose-us-one__content ul li .inner .icon-box span {
     position: relative;
     display: inline-block;
-    color: var(--thm-black);
+    color: var(--thm-white);
     font-size: 65px;
     line-height: 65px;
     transition: all 500ms linear;
@@ -6916,7 +6922,7 @@ Project Four Css
 
 	.blog-details__content-form .title-box h2 {
 		font-size: 30px;
-		line-height: 40px;
+		line-height: 20px;
 	}
 
 	.sidebar__category-list li a {
