--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1393,7 +1393,7 @@ Feauture One
 .feauture-one {
     position: relative;
     display: block;
-    background: var(--thm-white);
+    background: #1F2937;
     padding: 120px 0px 90px;
     z-index: 1;
 }
@@ -1540,7 +1540,7 @@ Feauture Three
     position: relative;
     display: block;
     background: var(--thm-white);
-    padding: 120px 0px 100px;
+    padding: 120px 0px 80px;
     z-index: 1;
 }
 
@@ -1743,11 +1743,12 @@ Feauture Two
 =============================================
 ***/
 .feauture-two {
+    /* background-color: #1F2937; */
     position: relative;
     display: block;
     padding: 0px 0px 0px;
-    margin-top: -130px;
-    margin-bottom: -130px;
+    margin-top: -120px;
+    margin-bottom: -200px;
     z-index: 3;
 }
 
@@ -2850,7 +2851,7 @@ Scrolling Text One Css
 .scrolling-text-one {
     position: relative;
     display: block;
-    margin-bottom: 70px;
+    /* margin-bottom: 70px; */
 }
 
 .scrolling-text-one__wrap {
@@ -3500,7 +3501,7 @@ About One About Css
 .about-one--about {
     position: relative;
     display: block;
-    padding: 120px 0px 120px;
+    padding: 40px 0px 80px;
     z-index: 1;
 }
 
