--- a/components/sections/home3/VisionMissionPage.css
+++ b/components/sections/home3/VisionMissionPage.css
@@ -1,12 +1,27 @@
 /* App Component Styles */
 .app-container {
   min-height: 60vh;
+  /* margin-top: 90px; */
   background-color: white; /*slate-800*/
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 2rem;
 }
+
+@media (max-width: 480px) {
+  .app-container {
+  margin-top: 90px;
+  margin-bottom: 30px;
+  }
+.features-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr) !important;
+  gap: 2rem;
+  text-align: center;
+}
+
+ }
 
 .main-wrapper {
   max-width: 72rem; /* max-w-6xl */
@@ -33,6 +48,7 @@
   padding: 1.5rem 2rem;
   width: 80%;
   max-width: 56rem; /* max-w-4xl */
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .features-grid {
