--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2251,7 +2251,7 @@ Call To Action One
     left: 30px;
     bottom: 30px;
     right: 30px;
-    background: rgba(var(--thm-white-rgb), 0.1);
+    /* background: rgba(var(--thm-white-rgb), 0.1); */
     content: "";
 }
 
@@ -2267,7 +2267,7 @@ Call To Action One
 }
 
 .call-to-action-one__content h2 {
-    /* color: var(--thm-white); */
+    color: var(--thm-white);
     font-size: 80px;
     line-height: 1.2em;
     font-weight: 700;
