--- a/public/assets/css/module-css/blog.css
+++ b/public/assets/css/module-css/blog.css
@@ -291,7 +291,7 @@
 .sidebar__single {
     position: relative;
     display: block;
-    background: var(--thm-gray-bg);
+    background: #E4A53B;
     padding: 40px 40px 40px;
     margin-bottom: 30px;
     z-index: 1;
@@ -308,7 +308,7 @@
     font-weight: 700;
     text-transform: capitalize;
     margin-top: -8px;
-    margin-bottom: 31px;
+    margin-bottom: 11px;
 }
 
 .sidebar__category-list {
@@ -332,6 +332,7 @@
     align-items: center;
     justify-content: space-between;
     background: var(--thm-white);
+    
     color: var(--thm-black);
     font-size: 16px;
     line-height: 30px;
@@ -692,15 +693,16 @@
 .sidebar__tags-list li a {
     position: relative;
     display: block;
-    color: var(--thm-gray);
+    color: var(--thm-white);
     font-size: 15px;
     font-weight: 400;
-    background: var(--thm-white);
+    background: none;
     padding: 6px 24px;
-    border-radius: 2px;
+    border-radius: 2px ;
     text-transform: capitalize;
     transition: all 200ms linear;
     transition-delay: 0.1s;
+    border-color: #dcdfe2;
 }
 
 .sidebar__tags-list li a:hover {
@@ -954,7 +956,7 @@
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 0.014em;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .blog-details__content-text1 .text2 {
@@ -964,7 +966,7 @@
 .blog-details__content-img2 {
     position: relative;
     display: block;
-    margin-top: 50px;
+    margin-top: 10px;
 }
 
 .blog-details__content-img2-single {
